feat: add right click card menu for better ux
